@@ -37,23 +37,32 @@ my $oarexec_pid_file = $Hash->{oarexec_pid_file};
 
 if ($ARGV[0] eq "suspend"){
     # Suspend all processes of the cpuset
-    system('#set -x;
-            PROC=0;
-            test -e '.$oarexec_pid_file.' && PROC=$(cat '.$oarexec_pid_file.');
-            for p in $(cat /dev/cpuset/oar/'.$Cpuset_name.'/tasks)
-            do
-            if [ $PROC != $p ]
-            then
-                oardodo kill -SIGSTOP $p;
-            fi
-            done
-          ');
+    if (-r "/dev/oar_cgroups/oar/$Cpuset_name/freezer.state"){
+        # We use the FREEZER cgroups feature if it is available
+        system('echo FROZEN > /dev/oar_cgroups/oar/'.$Cpuset_name.'/freezer.state');
+    }else{
+        system('#set -x;
+                PROC=0;
+                test -e '.$oarexec_pid_file.' && PROC=$(cat '.$oarexec_pid_file.');
+                for p in $(cat /dev/cpuset/oar/'.$Cpuset_name.'/tasks)
+                do
+                if [ $PROC != $p ]
+                then
+                    oardodo kill -SIGSTOP $p;
+                fi
+                done
+              ');
+    }
 }elsif ($ARGV[0] eq "resume"){
     # Resume all processes of the cpuset
-
-    system('PROCESSES=$(cat /dev/cpuset/oar/'.$Cpuset_name.'/tasks)
-            oardodo kill -SIGCONT $PROCESSES'
-          );
+    if (-r "/dev/oar_cgroups/oar/$Cpuset_name/freezer.state"){
+        # We use the FREEZER cgroups feature if it is available
+        system('echo THAWED > /dev/oar_cgroups/oar/'.$Cpuset_name.'/freezer.state');
+    }else{
+        system('PROCESSES=$(cat /dev/cpuset/oar/'.$Cpuset_name.'/tasks)
+                oardodo kill -SIGCONT $PROCESSES
+               ');
+    }
 }else{
     print("[suspend_resume_manager] Bad command line argument $ARGV[0].\n");
     exit(3);
